--- a/gb/23/12/1/n14128195.md
+++ b/gb/23/12/1/n14128195.md
@@ -41,27 +41,25 @@
 <p>在淀粉的摄取方面，控制份量是关键，建议选择小颗三角饭团或地瓜，注意食材的份量和摄取顺序，不要先吃淀粉类，以维持血糖的稳定。</p>
 <p>掌握这些方法，一定可以轻松而健康地甩掉内脏脂肪。（网站专文，禁止转载）</p>
 <p>身处纷乱之世，心存健康之道，就看<span style="color: #188638;"><a style="color: #188638;" href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1" target="_blank" rel="noopener noreferrer">健康1+1</a></span>！</p>
-<p><a title="YouTube video player" src=""></a><a href="https://d2zvse34bag8ol.cloudfront.net/Z7xKQ8Ltq"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/03oor-NIPBw?si=fLHhqTInoTOfLAwi" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a><br />
+<p><a title="YouTube video player" src=""></a><a href="https://d337p4rc38c0de.cloudfront.net/B3rKQ8Ltc"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/03oor-NIPBw?si=fLHhqTInoTOfLAwi" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a><br />
 （初日医学-宋晏仁医师*COFIT提供）</p>
-<h3><span style="color: #000000;">（本文摘编自</span>《<ahref=""></a><a href="https://d2zvse34bag8ol.cloudfront.net/Z7xKQ8Ltq"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/watch?v=03oor-NIPBw">“内脏脂肪”最怕你做这3件事，口诀534，不上健身房也能瘦肚子</a>》<span style="color: #000000;">，<ahref="https://hi.cofit.me/jR0Fr">李唐越医师</a>，</span><ahref="https://events.cofit.me/genesis-Dr-Yen-Jen-Sung-20393?utm_campaign=2023dr-yen-jen-sung&amp;utm_medium=promotion&amp;utm_source=web&amp;utm_term=glucagon" target="_blank" rel="noopener noreferrer">初日医学-宋晏仁医师*COFIT提供</a>）</h3>
+<h3><span style="color: #000000;">（本文摘编自</span>《<ahref=""></a><a href="https://d337p4rc38c0de.cloudfront.net/B3rKQ8Ltc"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/watch?v=03oor-NIPBw">“内脏脂肪”最怕你做这3件事，口诀534，不上健身房也能瘦肚子</a>》<span style="color: #000000;">，<ahref="https://hi.cofit.me/jR0Fr">李唐越医师</a>，</span><ahref="https://events.cofit.me/genesis-Dr-Yen-Jen-Sung-20393?utm_campaign=2023dr-yen-jen-sung&amp;utm_medium=promotion&amp;utm_source=web&amp;utm_term=glucagon" target="_blank" rel="noopener noreferrer">初日医学-宋晏仁医师*COFIT提供</a>）</h3>
 <h3><span style="color: #008000;">· <span style="color: #188638;"><a style="color: #188638;" href=><a href="https://github.com/19920513/djy/blob/master/gb/21/8/11/n13155488.md#1" target="_blank" rel="noopener noreferrer">别被“体重”迷惑了 身体这7大数值更重要</a></span></span></h3>
 <h3><span style="color: #008000;">· <span style="color: #188638;"><a style="color: #188638;" href="https://github.com/19920513/djy/blob/master/gb/19/2/21/n11059518.md#1" target="_blank" rel="noopener noreferrer">消内脏脂肪最有效的运动 是有氧运动还是肌力训练？</a></span></span></h3>
 <h3><span style="color: #008000;">· <span style="color: #188638;"><a style="color: #188638;" href="https://github.com/19920513/djy/blob/master/gb/19/10/21/n11603030.md#1" target="_blank" rel="noopener noreferrer">吃对就能瘦！中医传授3秘诀 轻松减重瘦小腹</a></span></span></h3>
 <p>责任编辑：李凡</p>
 <hr>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/12/n10969767.md#1">“内脏脂肪”和心肌梗塞有关 超过这个腹围要当心</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/2/21/n11059518.md#1">消内脏脂肪最有效的运动 是有氧运动还是肌力训练？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/2/22/n11064456.md#1">小心内脏脂肪 7种癌症和它有关</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/6/21/n13037340.md#1">瘦小腹很简单！消内脏脂肪食物前10名</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/19/n13911282.md#1">大麦改善肠道环境缓解便秘 还能减少内脏脂肪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/16/n14074775.md#1">他一年甩30公斤 脂肪肝消失 秘诀是吃2种食物</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/10/n14113420.md#1">水肿就显胖 每天拍50下 中医对付2种肥胖有奇效</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122787.md#1">患上失智症？腹部脂肪可提前15年发出警告</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/12/n14115048.md#1">脂肪总堆积？名医教你简单饮食原则分解脂肪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/26/n14144179.md#1">香蕉减肥 早上吃还是晚上吃好？3个技巧很关键</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14134360.md#1">报告：中共加强对维权人士家属的株连迫害</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/5/n14130100.md#1">中国个人债务危机潮到来 “老赖”人数激增</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：乐高乐园的中国元素 文化的旅程</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141316.md#1">这些亚马逊好物 让你生活品质大提升</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">UGG 男士雨衣61%折扣</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/19920513/djy/blob/master/gb/17/10/31/n9789303.md#1" target="_blank">林辉：曾大红大紫的魏巍被批判与软禁的人生</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/7/24/n11406694.md#1" target="_blank">美国会吁中共释放法轮功学员 邓翠苹女儿感谢</a></li><hr>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/11/3/n10828040.md#1" target="_blank">大饥荒是中共有计划的屠杀手段（中）</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/8/5/n10617345.md#1" target="_blank">婆媳恩怨千千结 一本宝书解枷锁</a></li><hr>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/8/n14132234.md#1">人身有多难得？聊斋中的轮回故事</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/20/n14119976.md#1">雨霖铃?李克强之死</a></li>
