--- a/gb/23/12/31/n14147439.md
+++ b/gb/23/12/31/n14147439.md
@@ -21,17 +21,19 @@
 <p>尽管从某些标准来看，这个家庭并没有太多财产，但他们对艾伦的康复充满了感激之情，而且他们在这座向他们表达了如此多爱的城市里有一个可以称之为家的地方。</p>
 <p>“我们当时就处于这种情况，所以我完全理解一无所有或拥有一些东西并必须重建的感觉，但我现在的情况是我要尽我所能地付出一点点。人们帮助了我，我也可以帮助他们。”</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14134360.md#1">报告：中共加强对维权人士家属的株连迫害</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/5/n14130100.md#1">中国个人债务危机潮到来 “老赖”人数激增</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：乐高乐园的中国元素 文化的旅程</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141316.md#1">这些亚马逊好物 让你生活品质大提升</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">UGG 男士雨衣61%折扣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/16/9/22/n8325098.md#1">华旅巴士加拿大班芙落河 安省游客一死一重伤</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/17/2/5/n8778007.md#1">卡城男怒杀租客宠物狗 获刑一年</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/21/n10990377.md#1">加拿大哪些地方可以捡公路野味？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/19/6/18/n11329652.md#1">亚省牧场主做剖腹产 叉角羚宝宝有新家</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/12/14/n12620797.md#1">司机撞人逃逸致2死??警方介入被调查</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14139970.md#1">卡尔加里环路提前十个月开通</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136102.md#1">卡城市议员高尔夫球场收听会议 面临制裁</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135309.md#1">卡城男子入室盗窃被控 唐人街珠宝店遭抢劫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135274.md#1">卡城将建造价值12亿元的生物燃料工厂</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/10/n14133598.md#1">卡尔加里家庭基本开支超过温哥华与多伦多</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/7/n11922778.md?dfh#1" target="_blank">了解法轮功：见证奇迹 解开生命奥秘</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/5/3/n11232692.md#1" target="_blank">林辉：为延安贩卖鸦片的毒贩死前缘何喊冤？</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/15/11/5/n4566246.md#1" target="_blank">患“不死绝症”大陆女士神奇“重生”</a></li>
+<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/10/28/n11616592.md#1" target="_blank">可心：从中共建政日与纽伦堡宣判同日说起（下）</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/13/5/31/n3883877.md#1" target="_blank">公安部高官透露“天安门自焚”内幕</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/23/n14142273.md#1">二个图谶  当前天象的大预言</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140085.md#1">金陵之会 王安石苏轼一笑泯恩仇</a></li>
