--- a/gb/23/12/31/n14147459.md
+++ b/gb/23/12/31/n14147459.md
@@ -40,7 +40,7 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/10/9/n10770724.md#1" target="_blank">裴毅然：毛泽东真诚“感谢皇军”</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/12/11/10/n3726603.md#1" target="_blank">【历史回顾】羊城晚报：老少皆炼法轮功</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/19920513/djy/blob/master/gb/20/1/29/n11829466.md#1" target="_blank">刘博：别让切尔诺贝利重演</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/2/8/n11032583.md#1" target="_blank">拥有幸福健康 澳洲民众感恩法轮功师父</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/23/n14142273.md#1">二个图谶  当前天象的大预言</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140085.md#1">金陵之会 王安石苏轼一笑泯恩仇</a></li>
